kube/mysvc-service-minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 8080
  selector:
      app: mysvc
