kube/mysvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-service
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30008
  selector:
      app: mysvc
